Project

General

Profile

Actions

Bug #64646

open

ceph osd pool rmsnap clone object leak

Added by Matan Breizman 2 months ago. Updated about 1 month ago.

Status:
Pending Backport
Priority:
Normal
Category:
Snapshots
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
quincy,reef,squid
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

There are 2 ways to remove pool snaps, rados tool or mon command (ceph osd pool rmsnap).
It seems that the monitor command is not reporting the actual removal via new_removed_snaps which is later proceed in OSDMap::apply_incremental.
This will result in a clone object leakage since the snap id won't be marked as purged (and won't be trimmed).

First step (https://github.com/ceph/ceph/pull/55841) would be to fix the command.

Second step is to handle already leaked snapids which were impacted by the faulty command https://github.com/ceph/ceph/pull/53545.


Related issues 3 (3 open0 closed)

Copied to RADOS - Backport #65095: quincy: ceph osd pool rmsnap clone object leakIn ProgressMatan BreizmanActions
Copied to RADOS - Backport #65096: reef: ceph osd pool rmsnap clone object leakIn ProgressMatan BreizmanActions
Copied to RADOS - Backport #65097: squid: ceph osd pool rmsnap clone object leakIn ProgressMatan BreizmanActions
Actions #1

Updated by Matan Breizman 2 months ago

  • Pull request ID set to 55841
Actions #2

Updated by Radoslaw Zarzynski 2 months ago

note from bug scrub: reviewed, went to QA.

Actions #3

Updated by Matan Breizman about 2 months ago

  • Description updated (diff)
Actions #4

Updated by Matan Breizman about 2 months ago

  • Description updated (diff)
Actions #5

Updated by Radoslaw Zarzynski about 2 months ago

  • Backport changed from quincy,reef to quincy,reef,squid

Need a squid backport as well.

Actions #6

Updated by Matan Breizman about 2 months ago

Radoslaw Zarzynski wrote:

Need a squid backport as well.

Awaiting main merge (https://github.com/ceph/ceph/pull/55841)

Actions #7

Updated by Radoslaw Zarzynski about 2 months ago

In QA.

Actions #8

Updated by Matan Breizman about 1 month ago

  • Status changed from Fix Under Review to Pending Backport
Actions #9

Updated by Backport Bot about 1 month ago

  • Copied to Backport #65095: quincy: ceph osd pool rmsnap clone object leak added
Actions #10

Updated by Backport Bot about 1 month ago

  • Copied to Backport #65096: reef: ceph osd pool rmsnap clone object leak added
Actions #11

Updated by Backport Bot about 1 month ago

  • Copied to Backport #65097: squid: ceph osd pool rmsnap clone object leak added
Actions #12

Updated by Backport Bot about 1 month ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF